5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1834_1277.log
== TEST (2019-06-27 16:38:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

tabela = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],
					[1,15,13,1,13,14,0]])

print(tabela)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:52:34) 
-- CODE:
from numpy import*

a = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid/111 - 2

x = a[i,j]

print(x)
-- ERROR:
File "XXXX", line 5
    [11,7,,0,11,8,3,13],
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:52:43) 
-- CODE:
from numpy import*

a = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid/111 - 2

x = a[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:52:59) 
-- CODE:
from numpy import*

a = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 2

x = a[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:53:30) 
-- CODE:
from numpy import*

a = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 2

x = a(i,j)

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:55:12) 
-- CODE:
from numpy import*
from numpy.linalg import*


a = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 2

x = a[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:55:45) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 2

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:56:36) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,8,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 1

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:58:03) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,8,5,13],[11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 1

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 12:58:20) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,8,5,13],[11,2,3,2,5,0,14], [1,15,13,1,13,14,0]])

cid1 = int(input("Digite o numero da cidade 1: "))
cid2 = int(input("Digite o numero da cidade 2: "))

i = cid1/111 - 1
j = cid2/111 - 1

x = tab[i:j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:58:50) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,8,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:00:21) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:01:52) 
-- CODE:
from numpy import*
from numpy.linalg import*


tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1



print(tab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:04:02) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1

x = tab[i,j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:04:31) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1

x = tab[i:j]

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:05:02) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1



print(tab[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:05:44) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))

i = C1/111 - 1
j = C2/111 - 1



print(tab[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:08:01) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 11):
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:08:05) 
-- CODE:
from numpy import*

tab = array([
[0,2,11,6,15,11,1],
[2,0,7,12,4,2,15],
[11,7,0,11,8,3,13],
[6,12,11,0,10,2,1],
[15,4,8,10,0,5,13],
[11,2,3,2,5,0,14], 
[1,15,13,1,13,14,0]
])

C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:23:02) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777:)
	print(1)
	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777:)
	print(15)	
	
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777:)
	print(13)	
	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777:)
	print(1)		
	
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777:)
	print(13)
	
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777:)
	print(14)	
	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777:)
	print(0)		
-- ERROR:
File "XXXX", line 17
    elif(C1 == 111 and C2 == 777:)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:23:57) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777):
	print(1)	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777):
	print(15)		
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777):
	print(13)	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777):
	print(1)			
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777):
	print(13)
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777):
	print(14)	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777):
	print(0)		
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 14:24:23) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777):
	print(1)	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777):
	print(15)		
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777):
	print(13)	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777):
	print(1)			
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777):
	print(13)
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777):
	print(14)	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777):
	print(0)		
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:24:35) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777):
	print(1)	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777):
	print(15)		
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777):
	print(13)	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777):
	print(1)			
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777):
	print(13)
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777):
	print(14)	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777):
	print(0)		
-- EXECUTION TIME:
1.64579
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:24:36) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777):
	print(1)	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777):
	print(15)		
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777):
	print(13)	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777):
	print(1)			
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777):
	print(13)
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777):
	print(14)	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777):
	print(0)		
-- EXECUTION TIME:
2.41133
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 14:24:36) 
-- CODE:
C1 = int(input("Digite o numero da cidade 1: "))
C2 = int(input("Digite o numero da cidade 2: "))


if(C1 == 111 and C2 == 111):
	print(0)
elif(C1 == 111 and C2 == 222):
	print(2)
elif(C1 == 111 and C2 == 333):
	print(11)
elif(C1 == 111 and C2 == 444):
	print(6)
elif(C1 == 111 and C2 == 555):
	print(15)
elif(C1 == 111 and C2 == 666):
	print(11)
elif(C1 == 111 and C2 == 777):
	print(1)	
elif(C1 == 222 and C2 == 111):
	print(2)
elif(C1 == 222 and C2 == 222):
	print(0)
elif(C1 == 222 and C2 == 333):
	print(7)
elif(C1 == 222 and C2 == 444):
	print(12)
elif(C1 == 222 and C2 == 555):
	print(4)
elif(C1 == 222 and C2 == 666):
	print(2)
elif(C1 == 222 and C2 == 777):
	print(15)		
elif(C1 == 333 and C2 == 111):
	print(11)
elif(C1 == 333 and C2 == 222):
	print(7)
elif(C1 == 333 and C2 == 333):
	print(0)
elif(C1 == 333 and C2 == 444):
	print(111)
elif(C1 == 333 and C2 == 555):
	print(8)
elif(C1 == 333 and C2 == 666):
	print(3)
elif(C1 == 333 and C2 == 777):
	print(13)	
elif(C1 == 444 and C2 == 111):
	print(6)
elif(C1 == 444 and C2 == 222):
	print(12)
elif(C1 == 444 and C2 == 333):
	print(11)
elif(C1 == 444 and C2 == 444):
	print(0)
elif(C1 == 444 and C2 == 555):
	print(10)
elif(C1 == 444 and C2 == 666):
	print(2)
elif(C1 == 444 and C2 == 777):
	print(1)			
elif(C1 == 555 and C2 == 111):
	print(15)
elif(C1 == 555 and C2 == 222):
	print(4)
elif(C1 == 555 and C2 == 333):
	print(8)
elif(C1 == 555 and C2 == 444):
	print(10)
elif(C1 == 555 and C2 == 555):
	print(0)
elif(C1 == 555 and C2 == 666):
	print(5)
elif(C1 == 555 and C2 == 777):
	print(13)
elif(C1 == 666 and C2 == 111):
	print(11)
elif(C1 == 666 and C2 == 222):
	print(2)
elif(C1 == 666 and C2 == 333):
	print(3)
elif(C1 == 666 and C2 == 444):
	print(2)
elif(C1 == 666 and C2 == 555):
	print(5)
elif(C1 == 666 and C2 == 666):
	print(0)
elif(C1 == 666 and C2 == 777):
	print(14)	
elif(C1 == 777 and C2 == 111):
	print(1)
elif(C1 == 777 and C2 == 222):
	print(15)
elif(C1 == 777 and C2 == 333):
	print(13)
elif(C1 == 777 and C2 == 444):
	print(1)
elif(C1 == 777 and C2 == 555):
	print(13)
elif(C1 == 777 and C2 == 666):
	print(14)
elif(C1 == 777 and C2 == 777):
	print(0)		
-- EXECUTION TIME:
1.30928
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
15
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
13
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
